# poetry-codecov-example

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
tests/: test_calculator.py
